<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    android:orientation="vertical"
    android:background="@color/login_background">





    <TextView
        android:id="@+id/userId_label"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/login_textColor"
        android:textColorHint="@color/login_textColor"
        android:hint="@string/forget_password_user_id_label"
        android:textAlignment="center"
        android:textSize="25dp"
        />

        <EditText
            android:id="@+id/forgoten_user_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/login_textColor"
            android:textColorHint="@color/login_textColor"
            android:hint="@string/forget_password_user_id_label_hint"
            android:textAlignment="center"
            android:textSize="25dp"
            />

        <Button
        android:id="@+id/check_user_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find Id"
        android:background="@color/login_button_color"
        android:onClick="checkUserIdInDatabase"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/login_textColor"/>

        <TextView
            android:id="@+id/security_question"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/login_textColor"
            android:textColorHint="@color/login_textColor"
            android:textAlignment="center"
            android:textSize="25dp"
            android:visibility="gone"
            />

    <EditText
        android:id="@+id/confirm_security_answer"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/login_textColor"
        android:textColorHint="@color/login_textColor"
        android:hint="@string/security_answer_for_forget_password"
        android:textAlignment="center"
        android:textSize="25dp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/new_password_label"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/login_textColor"
        android:textColorHint="@color/login_textColor"
        android:text="Enter New Strong Password"
        android:textAlignment="center"
        android:textSize="25dp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/new_passsword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/login_textColor"
        android:textColorHint="@color/login_textColor"
        android:hint="@string/select_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="25dp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/new_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/login_textColor"
        android:textColorHint="@color/login_textColor"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="25dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/update_password_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Update Password"
        android:background="@color/sign_up_color"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:onClick="updatePassword"
        android:textColor="@color/login_textColor"
        android:visibility="gone"/>

        <Button
            android:id="@+id/verify_security_answer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Verify"
            android:background="@color/sign_up_color"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:onClick="checkSecurityAnswer"
            android:textColor="@color/login_textColor"
            android:visibility="gone"/>

    </LinearLayout>